# whisper_grpc

./: .coveragerc  .gitignore  .readthedocs.yml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  LICENSE.txt  Makefile  Pipfile  README.md  README.rst  client.spec  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  transcribe.py  transcribe_anime_episode.py  whisper.proto  whisper_handler.py  whisper_pb2.py  whisper_pb2_grpc.py
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
docs/: conf.py  index.rst
media/: fate-test.en.ass
src/whisper_grpc/: __init__.py  common.py  grpc_server.py  rest_server.py  server.py  service.py  skeleton.py  transcribe.py  transcribe_anime_episode.py
src/whisper_grpc/client/: client_plex.py
src/whisper_grpc/grpc/: grpc_server.py
src/whisper_grpc/grpc/proto/: whisper.proto  whisper_grpc.py  whisper_pb2.py
src/whisper_grpc/proto/: whisper.pb.gw.go  whisper.proto  whisper_grpc.py  whisper_pb2.py  whisper_pb2.pyi  whisper_pb2_grpc.py
src/whisper_grpc/rest/: rest_server.py
src/whisper_grpc/utils/: client_plex.py  client_whisper.py  common.py  logging_config.py
tests/: conftest.py  test_skeleton.py  test_transcribe.py
whisper/: client.py  client_plex.py  client_whisper.py  server.py  service.py  transcribe.py
whisper/proto/: whisper.proto  whisper_pb2.py  whisper_pb2.pyi  whisper_pb2_grpc.py
whisper/utils/: client_whisper.py
whisper_grpc/: common.py  server.py  service.py  transcribe.py  transcribe_anime_episode.py
whisper_grpc/proto/: whisper.proto  whisper_grpc.py  whisper_pb2.py
whisper_grpc/tests/: test_service.py
whisper_grpc/utils/: client_plex.py
